2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.14 released.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.13 released.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Restore audio analysis button for individual
	sources (#607 and #622).

2015-06-30  c.hetherington  <cth@carlh.net>

	* Write FFmpeg messages of AV_LOG_WARNING and
	below to the project's log file.

2015-06-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.12 released.

2015-06-25  c.hetherington  <cth@carlh.net>

	* Disallow impossible burn settings by manipulating
	the controls in the subtitle panel (#625).

2015-06-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.11 released.

2015-06-26  Carl Hetherington  <cth@carlh.net>

	* Fix missing subtitles in some cases.

	* Fix no-rebuild of DCP after subtitle burn is turned off/on.

2015-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.10 released.

2015-06-25  c.hetherington  <cth@carlh.net>

	* Add decode debugging option.

2015-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.9 released.

2015-06-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.8 released.

2015-06-24  c.hetherington  <cth@carlh.net>

	* Bump libdcp for probable fix to various font ID problems (#620).

2015-06-23  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect saving of colour conversion settings (#618).

2015-06-21  Carl Hetherington  <cth@carlh.net>

	* Add some more video properties to the content properties
	dialogue.

	* Version 2.1.7 released.

2015-06-21  Carl Hetherington  <cth@carlh.net>

	* Prevent DCP creation if the project is set up to request
	non-burnt-in subtitles with text-subtitle content (#606).

	* Fix status message appearance on OS X (#615).

2015-06-19  Carl Hetherington  <cth@carlh.net>

	* Fix non-working audio analysis dialogue.

	* Version 2.1.6 released.

2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.5 released.

2015-06-18  c.hetherington  <cth@carlh.net>
