@@ -1,3 +1,7 @@
+2015-07-02  c.hetherington  <cth@carlh.net>
+
+	* Remove output gamma configuration option.
+
 2015-07-02  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.14 released.
